circle overflow fix

--- a/styles/Donate.module.scss
+++ b/styles/Donate.module.scss
@@ -109,10 +109,16 @@ $flex-basis: 100px;
   @include for-size(xl-up) {
     max-width: 60vw;
   }
+  @include for-size(xl-up1) {
+    max-width: 55vw;
+  }
 }
 
-.contribution {
+.sectionContribution {
   z-index: 2;
+}
+.contribution {
+  z-index: 3;
   @extend %flex-column;
 }
 
